apex/grammar.js
    parser_output: ($) => repeat($.statement),

    // Expressions

    dml_expression: ($) =>
      prec.right(
        choice(
          seq(
            $.dml_type,
            optional(
              field("security_mode", seq(ci("as"), $.dml_security_mode)),
            ),
            field("target", $.expression),
          ),
          seq(
            alias($.upsert_dml_type, $.dml_type),
            optional(
              field("security_mode", seq(ci("as"), $.dml_security_mode)),
            ),
            field("target", $.expression),
            optional(field("upsert_key", $._unannotated_type)),
          ),
          seq(
            alias($.merge_dml_type, $.dml_type),
            optional(
              field("security_mode", seq(ci("as"), $.dml_security_mode)),
            ),
            field("target", $.expression),
            " ",
            field("merge_with", $.expression),
          ),
        ),
      ),

    dml_type: ($) => choice($.insert, $.update, $.delete, $.undelete),

    insert: ($) => ci("insert"),
    dml_security_mode: ($) => choice($.user, $.system),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.identifier, $.field_access, $.array_access)),
          field(
            "operator",
            alias(
              choice(
                "=",
                "+=",
                "-=",
                "*=",
                "/=",
                "&=",
                "|=",
                "^=",
                "%=",
                "<<=",
                token(seq("<", /[\s\n]*/, "<", /[\s\n]*/, "=")),
                token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, "=")),
                token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, ">", /[\s\n]*/, "=")),
              ),
              $.assignment_operator,
            ),
          ),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          [">", PREC.REL],
          ["<", PREC.REL],
          [alias(token(seq(">", /[\s\n]*/, "=")), ">="), PREC.REL],
          [alias(token(seq("<", /[\s\n]*/, "=")), "<="), PREC.REL],
          ["==", PREC.EQUALITY],
          ["===", PREC.EQUALITY],
          ["!=", PREC.EQUALITY],
          ["<>", PREC.EQUALITY],
          ["!==", PREC.EQUALITY],
          ["&&", PREC.AND],
          ["||", PREC.OR],
          ["??", PREC.NULL_COALESCE],
          ["+", PREC.ADD],
          ["-", PREC.ADD],
          ["*", PREC.MULT],
          ["/", PREC.MULT],
          ["&", PREC.BIT_AND],
          ["|", PREC.BIT_OR],
          ["^", PREC.BIT_XOR],
          ["%", PREC.MULT],
          [alias(token(seq("<", /[\s\n]*/, "<")), "<<"), PREC.SHIFT],
          [alias(token(seq(">", /[\s\n]*/, ">")), ">>"), PREC.SHIFT],
          [
            alias(token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, ">")), ">>>"),
            PREC.SHIFT,
          ],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    update_expression: ($) =>
      prec.left(
        PREC.UNARY,
        choice(
          // Post (in|de)crement is evaluated before pre (in|de)crement
          seq(
            field("operand", $.expression),
            field("operator", $.update_operator),
          ),
          seq(
            field("operator", $.update_operator),
            field("operand", $.expression),
          ),
        ),
      ),

    update_operator: ($) => choice("++", "--"),

    array_creation_expression: ($) =>
      prec.right(
        seq(
          ci("new"),
          field("type", $._simple_type),
          choice(
            seq(
              field("dimensions", repeat1($.dimensions_expr)),
              field("dimensions", optional($.dimensions)),
            ),
            seq(
              field("dimensions", $.dimensions),
              field("value", $.array_initializer),
            ),
            seq(field("value", $.array_initializer)),
          ),
        ),
      ),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    object_creation_expression: ($) =>
      prec.right(
        seq(
          ci("new"),
          field("type_arguments", optional($.type_arguments)),
          field("type", $._simple_type),
          field("arguments", $.argument_list),
          optional($.class_body),
        ),
      ),

    field_access: ($) =>
      seq(
        field("object", choice($.primary_expression, $.super)),
        $._property_navigation,
        field("field", choice($.identifier, $.this)),
      ),

    _property_navigation: ($) => choice($.safe_navigation_operator, "."),

    array_access: ($) =>
      seq(
        field("array", $.primary_expression),
        "[",
        field("index", $.expression),
        "]",
      ),

    method_invocation: ($) =>
      seq(
        choice(
          field("name", $.identifier),
          seq(
            field("object", choice($.primary_expression, $.super)),
            $._property_navigation,
            field("type_arguments", optional($.type_arguments)),
            field("name", $.identifier),
          ),
        ),
        field("arguments", $.argument_list),
      ),

    argument_list: ($) => seq("(", commaJoined($.expression), ")"),

    type_arguments: ($) => seq("<", commaJoined($._type), ">"),

    version_expression: ($) =>
      seq(
        ci("Package"),
        ".",
        ci("Version"),
        ".",
        choice(ci("Request"), field("version_num", $.version_number)),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_statement: ($) => seq($.expression, ";"),

    do_statement: ($) =>
      seq(
        ci("do"),
        field("body", $.block),
        ci("while"),
        field("condition", $.parenthesized_expression),
        ";",
      ),

    try_statement: ($) =>
      seq(
        ci("try"),
        field("body", $.block),
        choice(
          repeat1($.catch_clause),
          seq(repeat($.catch_clause), $.finally_clause),
        ),
      ),

    catch_clause: ($) =>
      seq(ci("catch"), "(", $.formal_parameter, ")", field("body", $.block)),

    finally_clause: ($) => seq(ci("finally"), $.block),

    if_statement: ($) =>
      prec.right(
        seq(
          ci("if"),
          field("condition", $.parenthesized_expression),
          field("consequence", $.statement),
          optional(seq(ci("else"), field("alternative", $.statement))),
        ),
      ),

    while_statement: ($) =>
      seq(
        ci("while"),
        field("condition", $.parenthesized_expression),
        field("body", $.statement),
      ),

    for_statement: ($) =>
      seq(
        ci("for"),
        "(",
        choice(
          field("init", $.local_variable_declaration),
          seq(commaJoined(field("init", $.expression)), ";"),
        ),
        field("condition", optional($.expression)),
        ";",
        commaJoined(field("update", $.expression)),
        ")",
        field("body", $.statement),
      ),

    enhanced_for_statement: ($) =>
      seq(
        ci("for"),
        "(",
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_id,
        ":",
        field("value", $.expression),
        ")",
        field("body", $.statement),
      ),

    run_as_statement: ($) =>
      // TODO: there might be a better generic way to express this
      seq(
        ci("System.runAs"),
        field("user", $.parenthesized_expression),
        $.block,
      ),

    class_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("superclass", $.superclass)),
        optional(field("interfaces", $.interfaces)),
        field("body", $.class_body),
      ),

    modifiers: ($) => repeat1(choice($.annotation, $.modifier)),

    modifier: ($) =>
      choice(
        $.global,
        $.public,
        $.testMethod,
        $.webservice,
        $.protected,
        $.override,
        $.private,
        $.virtual,
        $.abstract,
        $.static,
        $.final,
        $.transient,
        $.with_sharing,
        $.without_sharing,
        $.inherited_sharing,
      ),

    public: ($) => ci("public"),
    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.method_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";",
      ),

    _variable_declarator_list: ($) =>
      commaJoined1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      seq(
        $._variable_declarator_id,
        optional(
          seq(
            alias("=", $.assignment_operator),
            field("value", $._variable_initializer),
          ),
        ),
      ),

    _variable_declarator_id: ($) =>
      seq(
        field("name", $.identifier),
        field("dimensions", optional($.dimensions)),
      ),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    array_initializer: ($) =>
      seq("{", commaJoined($._variable_initializer), "}"),

    _type: ($) => choice($._unannotated_type, $.annotated_type),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),

    _simple_type: ($) =>
      choice(
        $.void_type,
        $.boolean_type,
        alias($.identifier, $.type_identifier),
        $.scoped_type_identifier,
        $.java_type,
        $.generic_type,
      ),

    scoped_type_identifier: ($) =>
      seq(
        choice(
          alias($.identifier, $.type_identifier),
          $.scoped_type_identifier,
          $.generic_type,
        ),
        ".",
        repeat($.annotation),
        alias($.identifier, $.type_identifier),
      ),

    generic_type: ($) =>
      seq(
        choice(
          alias($.identifier, $.type_identifier),
          $.scoped_type_identifier,
        ),
        $.type_arguments,
      ),

    local_variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        ";",
      ),

    line_comment: ($) => token(prec(PREC.COMMENT, seq("//", /[^\r\n]*/))),

    identifier: ($) => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // Literals

    int: ($) => token(seq(DIGITS, optional(choice("l", "L")))),

    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,
